fixed spacing between nav link items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ nav {
 nav div a:nth-child(-n+2):after {
   content: '|';
   color: #e8e8e8;
-  padding: 0 5px 0 10px;
+  padding-left: 1em;
 }
 
 a.nav-item, a.nav-item:link, a.nav-item:visited {
